# english_study

./: .gitignore  AGENTS.md  LEGACY_NOTE.md  README.md  REBUILD_AND_SMOKE.md  Rebuild And Smoke.md  Start Easy Mode.cmd  USER_GUIDE.md  pyproject.toml
.codex/: config.toml
.codex/skills/user-path-validation/: SKILL.md
app/: cli.py  config.py  easy_mode.py  paths.py
application/: __init__.py  facade.py  path_context.py  results.py
data/: study.db
docs/gen2_1/: BETTER_TEMPLATES_SPEC.md  GEN2_1_PLAN.md  REVIEW_RESULT_TEMPLATE_V2_SPEC.md  review_result_template_v2_draft.md
docs/ui/: UI_SHELL_SPEC.md
domain/: enums.py  models.py  policy.py  scheduler.py  scoring.py
english_study.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
infrastructure/: __init__.py  path_resolver.py  sync_bridge.py
ingest/: daily_parser.py  machine_block.py  normalizer.py  review_parser.py
interfaces/: clipboard.py  obsidian_export.py
logs/daily/: 2026-04-07_gen2.md  2026-04-08_gen2.md  2026-04-10_gen2.md
logs/review/: 2026-04-10_review.md
output/: daily_prompt.md  review_plan.md  review_prompt.md  review_result_template.md
services/: daily_prompt_service.py  ingest_service.py  inspect_service.py  review_metadata_hints.py  review_plan_service.py  review_prompt_service.py  review_template_service.py
storage/: db.py  evidence_repo.py  migrations.py  session_repo.py  state_repo.py  word_repo.py
tests/: test_policy.py  test_scheduler.py
ui_shell/: __init__.py  routes.py  server.py  viewmodels.py
ui_shell/templates/: index.html
(+1 files in other folders)
