[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "english-study"
version = "0.1.0"
description = "Gen2 scaffold for an English learning system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
study = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "domain*", "ingest*", "storage*", "services*", "interfaces*"]
